// Test proto for use in the Status proto tests.

syntax = "proto3";

package px.testpb;

option go_package = "testpb";

message TestChildMessage {
  string string_val = 1;
}

// This is the proto representation.
message TestParentMessage {
  int64 int_val = 1;
  repeated TestChildMessage child = 2;
}
